feature: added cg error_report, mention in help and endtext analysis (closes #5)

--- a/help/howto_process_project.wiki
+++ b/help/howto_process_project.wiki
@@ -89,6 +89,31 @@ small part of the genome) more extensive distribution would actually give
 more work (overhead) than it saves (esp. giving it only 2 cores to work
 with)
 
+== Troubleshooting ==
+Errors in the submission command (e.g. the given reference dir does not exists)
+are returned immediately. You can get more extensive information on such errors
+by adding the -stack 1 option (and possible the optiuon -v 2)
+When running distributed (option -d with sge, slurm, or a number of cores), scywalker
+can also encounter errors in the submitted jobs. Information on submitted jobs is
+gathered in a directory log_jobs (files per job) and in a tsv log file name typically named
+process_project*.<ext>, where <ext> can be
+* **submitting** when not all jobs are submitted yet
+* **running** when the submission command is finished, but some jobs are still running (e.g. on cluster)
+* **finished** on successful completion (when all jobs are ready and there were no errors, the log_jobs directory is deleted)
+* **error** when all jobs are ready, but some had errors
+
+When there was an error in one job, all jobs that depend on results of that job will also have errors
+(dependencies that are not found), so you typically want to look for the first error. You can do
+this by checking/querying the (tsv) log file. The convenience function error_report can be used to get a
+more nicely formatted overview of the errors (if you do not specify the
+logfile, it will take the most recent one in the current working
+directory):
+{{{
+cg error_report ?logfile?
+}}}
+In this you can check the error messages, time run, etc.
+With the **runfile** given in this output, you can try to run specific jobs separately
+
 == Results ==
 All analysis results are added in the projectdir, as described in
 [[projectdir]]. You can check the process_project_*.finished file (tsv)
@@ -196,6 +221,6 @@ the references.
 
 For amplicon sequencing, the markduplicates part should be removed, and
 the following part added after making the realignment:
-{{{Amplicon primers were clipped using genomecomb (1)}}}
-
+{{{
+Amplicon primers were clipped using genomecomb (1)
 }}}
