fix jobs: put cgjob(submitoptions) in job_process_submit_*, job_logfile_par_close missing quotes, slurm -dqueue option, help

--- a/help/joboptions.wiki
+++ b/help/joboptions.wiki
@@ -92,8 +92,11 @@ checking the logfile.
 == Options ==
 List of all options supported by job enabled commands:
 ; -d value (--distribute): distribute method, see in description (also -distribute)
-; -dpriority value: (only for sge) run jobs with the given priority (default is 0)
-; -dqueue value: (only for sge) Use this option if you want to run on another queue than the default all.q
+; -dpriority value: run jobs with the given priority (default is 0; for sge negative numbers decrease priority; for slurm this is given through the --nice option, which gives greater priority to negative values)
+; -dqueue value: Use this option if you want to run on another queue than the default all.q (for slurm this will specify the "partition(s)" / -p option to sbatch)
+; -submitoptions value: can be used to add any options to the submit command. 
+The text in value will be added verbatim, so options must be specified as they would be given to the submit command of the job system used,
+e.g. for slurm {{{-submitoptions '--account=test1'}}}
 ; -dcleanup success/never/allways: Allows you to keep all run/log files in the log_jobs
 dirs even if a jub is successfull (**never**), or to allways delete them (**allways**)
 instead of only deleting them after a succesfull run (**success**)
