--- a/lib/cg_process_project.wiki
+++ b/lib/cg_process_project.wiki
@@ -153,9 +153,10 @@ This option can be given more than once; all given files will be added
 ; -dbfiles files: Use **files** for extra (files in **dbdir** are already used) annotation. **files** should be a space separated list of files.
 ; -conv_nextseq 1/0: generate fastqs for nextseq run & create sample folders - rundir should be placed in projectdir
 of resulting variants. This option can be added multiple times (with different files)
-; -jobsample 0/1: By default (0) the processing of each sample is split in many separate jobs.
-If you have to process many samples with relatively short indivual runtimes, you can set this
-to 1 to run each sample in one job, thus reducing the job managment overhead.
+; -jobsample integer: By default (0) the processing of each sample is split in many separate jobs.
+If you have to process many samples with relatively short individual runtimes or your cluster limits the number of jobs
+you can set this to 1 or more to run each sample in only one job, thus reducing the job managment overhead.
+The number given is the number of cores assigned to each such job.
 ; -keepfields fieldlist: Besides the obligatory fields, include only the
 fields in fieldlist (space separated) in the multicompar file. Default is
 to use all fields present in the file (*). All fields will still be used
