--- a/lib/cg_makerefdb.wiki
+++ b/lib/cg_makerefdb.wiki
@@ -23,18 +23,39 @@ For some genomes genomecomb includes a script (e.g.
 makedbs/makedbs_hg38.sh for human)with extended preset options and adding
 (much) more annotations not coming from UCSC.
 
+Some options give information that cannot be easily derived from the downloads, 
+and can be important for specific analysis. These are best supplied:
+The **-organelles** option lists chromosomes that are (actually) organelle
+genomes (these are treated differently e.g. by scywalker analysis)
+
+When distributing over chromosomes (or regions), by default alt and
+unplaced chromosomes (usually small) are grouped together. This default
+relies on the fact that these (often) contain a "_", and so, e.g.
+chr1_KI270706v1_random, chr1_KI270707v1_random are grouped under chr1_.
+For some genomes this default is not ideal, e.g. the dual human-mouse
+genome provided by cellranger makes only 2 groups (one per genome) You can
+use the **-groupchromosomes** option to specify a different way of
+grouping: Each chromosome is matched to the given list of regular
+expressions, and if it matches one the chromosome is assigned to a group
+named after the match.
+The resulting file genomeseq.groupchromosomes in the reference directory
+can be manually adjusted after creation (it is a tsv file with assignments
+of each chromosome to a group).
+
 == Arguments ==
 ; dbdir: name/path of result directory
 
 == Options ==
-; -genesdb: 
-; -mirbase: 
+; -genomeurl url: url to download the genomesequence from (instead of the UCSC default)
+; -organelles list: list of chromosome names that are organelle genomes (these are treated differently e.g. by scywalker analysis)
+; -pseudoautosomal list: list of pseudoautosomal regions
+; -groupchromosomes list: list of patterns indicating which (small) chromosomes should be grouped for distrreg
+; -genesdb list: 
+; -mirbase string: 
 ; -regionsdb_collapse: 
 ; -regionsdb_join: 
 ; -dbsnp: 
 ; -refSeqFuncElemsurl: 
-; -genomeurl: 
-; -pseudoautosomal: 
 ; -transcriptsurl: 
 ; -transcriptsgtf: 
 ; -webcache: 
