--- a/docs/reference.wiki
+++ b/docs/reference.wiki
@@ -39,12 +39,13 @@ are to be compressed
 ; -compressionthreads number: Use **number** [[cg_threads (default 1) to compress the result 
 file (if the result needs to be compressed, and the compression method supports threads)
 
-; -shadowdir|threads (default 1) to compress the result 
-file (if the result needs to be compressed, and the compression method supports threads)
-
-; -shadowdir]]: alternative location (e.g. a faster disk or disk without snapshots) to store some of the intermediate files
+; -shadowdir path: alternative location (e.g. a faster disk or disk without snapshots) to store some of the intermediate files
 that must be accessible to multiple jobs (will be made using [[shadow_mkdir]]).  
 Can also be specified using the environment variable SHADOWDIR.
+; -scratchdir: alternative location to store (local, not potentially accessed by multiple nodes) temporary
+files which may become very big. The default location is /tmp; if /tmp is too small (on some nodes)
+you can specify a different location using this option
+Can also be specified using the environment variable SCRATCHDIR.
 
 == Available subcommands ==
 
