--- a/help/howto_query.wiki
+++ b/help/howto_query.wiki
@@ -540,7 +540,7 @@ cg select -g '-refGene_gene' refexome.tsv.zst | less
 We could also use this type of summary to look for genes with compound
 variants. However, there are some extra complexities:
 
-We want to count (and find multiple) variants in the same transcipt (rather than
+We want to count (and find multiple) variants in the same transcript (rather than
 gene) with a given impact (e.g. ignoring intronic variants). This can be
 done using the transcripts function, used here to create the field refGene_transcripts
 that will contain a list of transcript names (together with gene name) for which the impact
